# qqmusic_web

./: .dockerignore  API doc.md  LICENSE  README.md  app.py  pyproject.toml  qqmusic_cred.pkl  requirements.txt  run.py
app/: __init__.py  config.py
app/models/: __init__.py  download_result.py  song_info.py
app/routes/: __init__.py  admin_routes.py  api_routes.py  web_routes.py
app/services/: __init__.py  cover_manager.py  credential_manager.py  file_manager.py  metadata_manager.py  music_downloader.py
app/static/css/: admin.css  style.css
app/static/js/: admin.js  script.js
app/templates/: admin.html  index.html
app/utils/: thread_utils.py
credential/: qqmusic_cred.pkl
docker/: docker-compose.yml  dockerfile  giteeinstall.sh  install.sh
static/css/: style.css
static/js/: script.js
templates/: index.html
